--- a/gold.html
+++ b/gold.html
@@ -1,4 +1,12 @@
-<h1>Check out our gold medals!</h1>
-
-<p>Medallion: $60</p>
-<p>Ribbon: $30</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Check out our gold medals!</h1>
+    <p>Medallion: $60</p>
+    <p>Ribbon: $30</p>
+  </body>
+</html>
